# cli

./: .gitignore  Cargo.toml  README.md
.github/workflows/: actions.yml
assets/: create-modal.js  global.css  index-search.js  mermaid-init.js  mini-toc.js  theme-init.js  theme-toggle.js
benches/: git_timestamps.rs
npm/: README.md  install.js  package.json  run.js
scripts/: update-mermaid.sh
src/: authors.rs  bundle.rs  git_utils.rs  github.rs  highlight.rs  lib.rs  main.rs  metadata.rs
