[package]
name = "dossiers"
version = "0.1.0"
edition = "2021"
autobins = false

[[bin]]
name = "dossiers"
path = "src/main.rs"

[dependencies]
actix-files = "0.6"
actix-web = "4"
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
lazy_static = "1"
maud = { version = "0.25", features = ["actix-web"] }
pulldown-cmark = { version = "0.10", default-features = false, features = ["html"] }
asciidoc-parser = "0.14"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"
unicode-normalization = "0.1"

[patch.crates-io]
indexmap-allocator-api = { git = "https://github.com/Hans-Halverson/indexmap-allocator-api.git" }
