[package]
name = "dossiers"
description = "Dossiers: A home for your specs, policies, and process docs"
version = "0.3.0"
edition = "2021"
autobins = false
homepage = "https://dossie.rs"
repository = "https://github.com/dossie-rs/cli"
license = "MIT"

[[bin]]
name = "dossiers"
path = "src/main.rs"

[dependencies]
actix-files = "0.6"
actix-web = "4"
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
lazy_static = "1"
maud = { version = "0.25", features = ["actix-web"] }
pulldown-cmark = { version = "0.10", default-features = false, features = ["html"] }
asciidoc-parser = "0.14"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"
unicode-normalization = "0.1"
toml = "0.8"
git2 = { version = "0.18", features = ["vendored-libgit2"] }
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "git_timestamps"
harness = false
