[package]
name = "dossiers"
description = "Dossiers: A home for your specs, policies, and process docs"
version = "0.7.0"
edition = "2021"
autobins = false
homepage = "https://dossie.rs"
repository = "https://github.com/dossie-rs/cli"
license = "MIT"
keywords = ["documentation", "markdown", "asciidoc", "docs", "cli"]
categories = ["command-line-utilities", "web-programming::http-server", "text-processing"]
# The npm/ dir is the npm-wrapper package (published separately, not part of the crate).
exclude = ["/npm"]

[[bin]]
name = "dossiers"
path = "src/main.rs"

[dependencies]
actix-files = "0.6"
actix-web = "4"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
lazy_static = "1"
md5 = "0.7"
maud = { version = "0.25", features = ["actix-web"] }
pulldown-cmark = { version = "0.10", default-features = false, features = ["html"] }
asciidoc-parser = "0.14"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
svgbob = "0.7"
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
thiserror = "1"
unicode-normalization = "0.1"
toml = "0.8"
git2 = { version = "0.18", features = ["vendored-libgit2"] }
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "git_timestamps"
harness = false
